<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E0E0">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E0E0E0"
        tools:context=".BuySong">

        <TextView
            android:id="@+id/infoTap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_dark"
            android:padding="10dp"
            android:text="@string/payment_header"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/SongName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/infoTap"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/holo_red_light"
            android:padding="10dp"
            android:text="@string/payment_s_name"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/getSongName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/infoTap"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/SongName"
            android:background="@android:color/holo_red_light"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:text="Name" />

        <TextView
            android:id="@+id/ArtistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/SongName"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/holo_orange_light"
            android:padding="10dp"
            android:text="@string/payment_a_name"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/getArtistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/SongName"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/ArtistName"
            android:background="@android:color/holo_orange_light"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:text="Artist" />

        <ImageView
            android:id="@+id/getAlbumImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/getArtistName"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:maxWidth="300dp"
            android:maxHeight="200dp"
            android:scaleType="fitCenter"
            android:src="@drawable/hrarth2" />

        <Button
            android:id="@+id/buySong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/getAlbumImg"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:background="@android:color/background_light"
            android:padding="10dp"
            android:text="@string/Buy_Song" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buySong"
            android:layout_margin="15dp"
            android:text="@string/payment_explain"
            android:textSize="20sp" />

    </RelativeLayout>
</ScrollView>